--- a/Porsche/Pages/Home.html
+++ b/Porsche/Pages/Home.html
@@ -8,19 +8,19 @@
     </head>
     <body>
         <header data-role="Header" class="home-header">
-            <a href="About.html">
+            <a href="About">
                 <img src="~/css/images/Header/About.png" class="home-image" />
             </a>
-            <a href="Collection.html">
+            <a href="Collection">
                 <img src="~/css/images/Header/Collection.png" class="home-image" />
             </a>
-            <a href="Home.html">
+            <a href="Home">
                 <img src="~/css/images/Header/Porsche.png" class="home-image-mid" />
             </a>
-            <a href="Contact.html">
+            <a href="Contact">
                 <img src="~/css/images/Header/Contact.png" class="home-image" />
             </a>
-            <a href="SignIn.html">
+            <a href="SignIn">
                 <img src="~/css/images/Header/SignIn.png" class="home-image" />
             </a>
             <div data-role="BurgerMenu" class="home-burger-menu" onclick="openNav()">
@@ -31,12 +31,12 @@
         </header>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" sytle="color:snow;">x</a>
-            <a href="Home.html">Home</a>
-            <a href="About.html">About</a>
-            <a href="Collection.html">Collection</a>
-            <a href="Contact.html">Contact</a>
-            <a href="SignIn.html">Sign In</a>
-            <a href="SignUp.html">Sign Up</a>
+            <a href="Home">Home</a>
+            <a href="About">About</a>
+            <a href="Collection">Collection</a>
+            <a href="Contact">Contact</a>
+            <a href="SignIn">Sign In</a>
+            <a href="SignUp">Sign Up</a>
         </div>
         <div class="content-container">
             <div class="video-container">
