--- a/Porsche/Pages/SignIn.html
+++ b/Porsche/Pages/SignIn.html
@@ -46,7 +46,7 @@
                 <div class="Containerlogin">
                     <!-- email -->
                     <div class="field">
-                        <input id="Email" placeholder="Email" required="required"> 
+                        <input id="Email" placeholder="Email" required="required">
                         <!--  @Html.TextBoxFor(m => m.Description, new { @placeholder = "Description", @required = "required", @maxlength = "200" })  *@ -->
                         <div class="line"></div>
                     </div>
@@ -78,6 +78,7 @@
             </div>
         </div>
         <script src="~/js/Layout.js" asp-append-version="true"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="~/js/SignIn.js" asp-append-version="true"></script>
     </body>
 </html>
