--- a/Porsche/Pages/SignIn.html
+++ b/Porsche/Pages/SignIn.html
@@ -37,46 +37,46 @@
             <a href="Contact">Contact</a>
             <a href="SignUp">Sign Up</a>
         </div>
-        <div class="content-container">
-            <div class="Container">
-                <!-- Image -->
-                <div class="CContainer">
-                    <img src="~/css/images/Sign/Logo2.png" alt="Logo" class="logoimg">
-                </div>
-                <div class="Containerlogin">
-                    <!-- email -->
-                    <div class="field">
-                        <input id="Email" placeholder="Email" required="required">
-                        <!--  @Html.TextBoxFor(m => m.Description, new { @placeholder = "Description", @required = "required", @maxlength = "200" })  *@ -->
-                        <div class="line"></div>
+        <form action="/SignIn" method="get">
+            <div class="content-container">
+                <div class="Container">
+                    <!-- Image -->
+                    <div class="CContainer">
+                        <img src="~/css/images/Sign/Logo2.png" alt="Logo" class="logoimg">
                     </div>
-                </div>
-                <div class="Containerlogin">
-                    <!-- password -->
-                    <div class="field">
-                        <input type="Password" id="PI" placeholder="Password" required="required">
-                        <!-- @* @Html.TextBoxFor(m => m.Event_Id, new { @type = "number", @placeholder = "EventID  ", @required = "required", @maxlength = "10" }) *@ -->
-                        <div class="line"></div>
-                        <img src="~/css/images/Sign/Hide-Pass.png" class="hideicon" id="H">
+                    <div class="Containerlogin">
+                        <!-- email -->
+                        <div class="field">
+                            <input type="email" id="Email" name="email" placeholder="Email" required="required">
+                            <div class="line"></div>
+                        </div>
                     </div>
-                </div>
-                <!-- Submit -->
-                <div class="BContainer">
-                    <button class="submitionbutton" role="button">Login</button>
-                </div>
-                <!-- SignIn -->
-                <div class="TContainer">
-                    <p style="color: snow; margin-top:20px; margin-bottom:5px;font-size:14px">
-                        Don't Have An Account?
-                    </p>
-                </div>
-                <div class="BContainer" style="margin-top:0px;">
-                    <a href="SignUp">
-                        <button type="button" class="button-style">SignUp</button>
-                    </a>
+                    <div class="Containerlogin">
+                        <!-- password -->
+                        <div class="field">
+                            <input type="password" id="PI" name="password" placeholder="Password" required="required">
+                            <div class="line"></div>
+                            <img src="~/css/images/Sign/Hide-Pass.png" class="hideicon" id="H">
+                        </div>
+                    </div>
+                    <!-- Submit -->
+                    <div class="BContainer">
+                        <button type="submit" class="submitionbutton" role="button">Login</button>
+                    </div>
+                    <!-- SignIn -->
+                    <div class="TContainer">
+                        <p style="color: snow; margin-top:20px; margin-bottom:5px;font-size:14px">
+                            Don't Have An Account?
+                        </p>
+                    </div>
+                    <div class="BContainer" style="margin-top:0px;">
+                        <a href="SignUp">
+                            <button type="button" class="button-style">SignUp</button>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
         <script src="~/js/Layout.js" asp-append-version="true"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="~/js/SignIn.js" asp-append-version="true"></script>
