--- a/Porsche/Pages/SignIn.html
+++ b/Porsche/Pages/SignIn.html
@@ -37,7 +37,7 @@
             <a href="Contact">Contact</a>
             <a href="SignUp">Sign Up</a>
         </div>
-        <form action="/SignIn" method="get">
+        <form action="/SignIn" method="post">
             <div class="content-container">
                 <div class="Container">
                     <!-- Image -->
