Role Added To token

--- a/Porsche/Pages/Home.html
+++ b/Porsche/Pages/Home.html
@@ -20,7 +20,7 @@
             <a href="Contact">
                 <img src="~/css/images/Header/Contact.png" class="home-image" />
             </a>
-            <a href="SignIn">
+            <a href="SignIn" id="SignInLink">
                 <img src="~/css/images/Header/SignIn.png" class="home-image" />
             </a>
             <div data-role="BurgerMenu" class="home-burger-menu" onclick="openNav()">
